--- a/Microsoft.Cse.SpeechToSpeech.UI/Microsoft.Cse.SpeechToSpeech.UI.csproj
+++ b/Microsoft.Cse.SpeechToSpeech.UI/Microsoft.Cse.SpeechToSpeech.UI.csproj
@@ -101,6 +101,7 @@
     </ApplicationDefinition>
     <Compile Include="Converter\ComboBoxValueConverter.cs" />
     <Compile Include="Ensure.cs" />
+    <Compile Include="Model\Language.cs" />
     <Compile Include="Model\SpeechModel.cs" />
     <Compile Include="Speech\AzureSpeechManager.cs" />
     <Compile Include="Speech\NotificationEventArgs.cs" />
