--- a/Microsoft.Cse.SpeechToSpeech.UI/packages.config
+++ b/Microsoft.Cse.SpeechToSpeech.UI/packages.config
@@ -3,5 +3,7 @@
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net47" />
   <package id="Microsoft.CognitiveServices.Speech" version="1.2.0" targetFramework="net47" />
   <package id="Microsoft.ProjectOxford.SpeechRecognition-x64" version="1.0.0.7" targetFramework="net47" />
+  <package id="Microsoft.Toolkit.Wpf.UI.Controls" version="5.0.1" targetFramework="net47" />
+  <package id="Microsoft.Toolkit.Wpf.UI.XamlHost" version="5.0.1" targetFramework="net47" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net47" />
 </packages>
