--- a/Microsoft.Cse.SpeechToSpeech.UI/packages.config
+++ b/Microsoft.Cse.SpeechToSpeech.UI/packages.config
@@ -6,4 +6,5 @@
   <package id="Microsoft.Toolkit.Wpf.UI.Controls" version="5.0.1" targetFramework="net47" />
   <package id="Microsoft.Toolkit.Wpf.UI.XamlHost" version="5.0.1" targetFramework="net47" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net47" />
 </packages>
