--- a/Microsoft.Cse.SpeechToSpeech.UI/packages.config
+++ b/Microsoft.Cse.SpeechToSpeech.UI/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.CognitiveServices.Speech" version="1.3.1" targetFramework="net461" />
   <package id="Microsoft.ProjectOxford.SpeechRecognition-x64" version="1.0.0.7" targetFramework="net47" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net47" />
+  <package id="NAudio" version="1.8.5" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net47" />
 </packages>
